--- a/index.html
+++ b/index.html
@@ -36,8 +36,7 @@
 			<section id="banner">
 				<div class="inner">
 					<h1>IGTI 3.0</h1>
-					<p>A responsive business oriented template with a video background<br />
-					designed by <a href="https://templated.co/">TEMPLATED</a> and released under the Creative Commons License.</p>
+					<p>Teste de alteração no html do site para ver a integração continua</p>
 				</div>
 				<video autoplay loop muted playsinline src="images/banner.mp4"></video>
 			</section>
